[gd_scene load_steps=2 format=3 uid="uid://bxxrr7bv5sogp"]

[ext_resource type="Script" uid="uid://7l64xc6oytt3" path="res://kmk/ui/availableAreas/trial_info_ui.gd" id="1_tok55"]

[node name="TrialInfo" type="HBoxContainer"]
offset_right = 1140.0
offset_bottom = 61.0
script = ExtResource("1_tok55")

[node name="BtConfirm" type="CheckButton" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="BtComplete" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
disabled = true
text = "Complete"

[node name="BtCopy" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
text = "Copy"

[node name="LabelTrial" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(920, 0)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[b]Beyond the Area Name door: Trial/Location name here[/b]
[color=gray]Here will be the description of the trial, the objective itself."
fit_content = true
vertical_alignment = 1

[connection signal="pressed" from="BtConfirm" to="." method="_on_bt_confirm_pressed"]
[connection signal="pressed" from="BtComplete" to="." method="_on_bt_complete_pressed"]
[connection signal="pressed" from="BtCopy" to="." method="_on_bt_copy_pressed"]
